--- a/documents/배포.md
+++ b/documents/배포.md
@@ -9,4 +9,5 @@ docker-compose up -d
 ```
 2. mkdir svc
 3. svc 디렉터리 안에 docker-compose.yml 생성(파일 내용은 해당 마크다운 파일의 같은 디렉터리내 파일 참조)
+4. svc 디렉터리 안에 .env, .npmrc 파일 생성
 4. github actions를 통한 이미지 빌드 & 배포 -> ssh를 통한 boot.sh 실행
